--- a/trunk/pubspec.yaml
+++ b/trunk/pubspec.yaml
@@ -19,13 +19,13 @@
 # THE SOFTWARE.
 
 name: solitaire
-version: 0.2.0
+version: 0.3.0
 author: Juan Mellado <jcmellado@gmail.com>
 homepage: http://code.google.com/p/dart-solitaire/
 description: Solitaire card game.
 
 environment:
-  sdk: ">=0.8.10+6 <2.0.0"
+  sdk: ">=1.1.1"
 
 dependencies:
-  browser: ">=0.9.0 <0.10.0"
+  browser: ">=0.9.1"
